
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-625] Adjusted text in config.inc.php writable warning message
- [#MODX-1586] Fixed toolbar rendering bug in user settings due to hidden div, now using hideMode: offsets 
- Added search for user box in usergroup users grid
- Changed User Group users grid to a non-local grid, now supports pagination and proper validation
- Enhanced UI for editing User Group Context/ResourceGroup ACLs
- [#MODX-1525] Added permissions field to modMenu to define policy permissions required to see Top Menu items
- Fixed bug in Packages grid to properly show provider name
- Added modRestResponse class, improved error handling for REST-based package management
- Added verification for Providers, now check to make sure they can connect before being added or updated
- Added Package View page to Package Management, allowing you to view more info about a package, view prior installed versions, and remove older package versions
- Fixed typo in setup script for PM changes
- Added version_major, version_minor, version_patch, release, and release_index fields to modTransportPackage tables to assist sorting and organization
- Fixed bug in transport schema
- [#MODX-1571] Fixed xtype in automatic_alias setting
- [#MODX-1572] Fixed deprecated error in PHPMailer service
- [#MODX-1512] Fixed bug with MODx.tree.Tree::refreshNode that caused a strange duplicate node error
- Updated xPDO to revision 392 to get new nested condition features
- [#MODX-1515] Fixed date picker CSS
- [#MODX-923] Added file path to config.inc.php configcheck message on welcome page
- [#MODX-1579] Added code to prevent invalid characters from being used in admin username/password in setup